# blog

./: .buildpacks  .cursorrules  .env.example  .env.receipt_printer  .gigalixir_aliases  .gitignore  .tool-versions  CLAUDE.md  Caddyfile  Dockerfile  Makefile  PRINTER_SETUP.md  PROCESS.md  Procfile  Procfile.bak  README.md  RECEIPT_PRINTER_README.md  SITE_REPORT.md  bach-brandenburg-electronic.js  chat_client.py  com.bobbby.receipt-printer.plist  deploy-slides.sh  deploy.sh  dialyzer_ignore.exs  docker-compose.yml  elixir_buildpack.config  files  fly.toml  init-db.sh  log.foo  migrate.exs  mix.exs  my_song.js  output.html  post.md  receipt-printer.service  receipt_poller.sh  receipt_printer.py  receipt_printer_service.py  setup_receipt_service.sh  (+4 more)
.claude/commands/: decision-graph.md  decision.md  document.md
.deciduous/: deciduous.db
assets/: package-lock.json  package.json  tailwind.config.js
assets/css/: app.css  (+2 more)
config/: config.exs  dev.exs  prod.exs  receipt_printer.exs  runtime.exs  test.exs
docs/: git-history.json  graph-data.json
lib/: blog_web.ex  bluesky_hose.ex  bluesky_jetstream.ex  code_inspector.ex  receipt_printer_emulator.ex
printed_receipts/: receipt_0001_20250827_182959.txt  receipt_0001_20250827_184629.txt  receipt_0002_20250827_184714.txt
receipt-printer-emulator/: Cargo.toml
receipt-printer-emulator/src/: escpos.rs  main.rs  printer.rs  renderer.rs
rel/: env.sh.eex  vm.args.eex
tasty_chrome/: README.md  background.js  generate_icons.py  manifest.json  phoenix_simple.js  popup.html  popup.js  styles.css
test/: test_helper.exs
(+480 files in other folders)
