[package]
name = "receipt_printer_emulator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
bytes = "1"
crossterm = "0.27"

[[bin]]
name = "receipt-printer"
path = "src/main.rs"
